@@ -1,151 +1,178 @@
 package com.project.back_end.services;
 
 import com.project.back_end.models.Doctor;
+import com.project.back_end.models.Appointment;
 import com.project.back_end.repo.AppointmentRepository;
 import com.project.back_end.repo.DoctorRepository;
+import com.project.back_end.services.TokenService;
+import jakarta.transaction.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
-@Service
+@SuppressWarnings("unused")
+@Service // 1. Mark as a Spring Service
 public class DoctorService {
 
     private final DoctorRepository doctorRepository;
     private final AppointmentRepository appointmentRepository;
     private final TokenService tokenService;
 
-    public DoctorService(
-            DoctorRepository doctorRepository,
-            AppointmentRepository appointmentRepository,
-            TokenService tokenService
-    ) {
+    // 2. Constructor Injection
+    //@Autowired
+    public DoctorService(DoctorRepository doctorRepository,
+                         AppointmentRepository appointmentRepository,
+                         TokenService tokenService) {
         this.doctorRepository = doctorRepository;
         this.appointmentRepository = appointmentRepository;
         this.tokenService = tokenService;
     }
 
+    // 3. Get availability of doctor for a specific date
+    @SuppressWarnings("unlikely-arg-type")
     @Transactional
-    public List<LocalTime> getDoctorAvailability(Long doctorId, LocalDate date) {
-        Doctor doctor = doctorRepository.findById(doctorId).orElse(null);
-        if (doctor == null) return List.of();
+    public List<String> getDoctorAvailability(Long doctorId, Date date) {
+        Optional<Doctor> optionalDoctor = doctorRepository.findById(doctorId);
+        if (optionalDoctor.isEmpty()) return Collections.emptyList();
 
-        List<LocalTime> bookedTimes = appointmentRepository
+        Doctor doctor = optionalDoctor.get();
+        List<String> allSlots = doctor.getAvailableTimes(); // assume Set<LocalTime>
+
+        List<Appointment> bookedAppointments = appointmentRepository
                 .findByDoctorIdAndAppointmentTimeBetween(
                         doctorId,
-                        date.atStartOfDay(),
-                        date.atTime(23, 59)
-                )
-                .stream()
-                .map(a -> a.getAppointmentTime().toLocalTime())
-                .collect(Collectors.toList());
+                        new java.sql.Timestamp(date.getTime()).toLocalDateTime().withHour(0).withMinute(0),
+                        new java.sql.Timestamp(date.getTime()).toLocalDateTime().withHour(23).withMinute(59)
+                );
 
-        return doctor.getAvailableTimes()
-                .stream()
-                .map(LocalTime::parse)
-                .filter(time -> !bookedTimes.contains(time))
+        Set<LocalTime> bookedSlots = bookedAppointments.stream()
+                .map(appt -> appt.getAppointmentTime().toLocalTime())
+                .collect(Collectors.toSet());
+
+        return allSlots.stream()
+                .filter(slot -> !bookedSlots.contains(slot))
+                .sorted()
                 .collect(Collectors.toList());
     }
 
+    // 5. Save doctor
+    @Transactional
     public int saveDoctor(Doctor doctor) {
+        if (doctorRepository.findByEmail(doctor.getEmail()) != null) {
+            return -1; // Conflict
+        }
         try {
-            if (doctorRepository.findByEmail(doctor.getEmail()) != null) return -1;
             doctorRepository.save(doctor);
             return 1;
         } catch (Exception e) {
-            e.printStackTrace();
             return 0;
         }
     }
 
-    public int updateDoctor(Doctor doctor) {
-        try {
-            if (!doctorRepository.existsById(doctor.getId())) return -1;
-            doctorRepository.save(doctor);
-            return 1;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return 0;
-        }
+    // 6. Update doctor
+    @Transactional
+    public int updateDoctor(Long id, Doctor updated) {
+        Optional<Doctor> optional = doctorRepository.findById(id);
+        if (optional.isEmpty()) return -1;
+
+        Doctor doctor = optional.get();
+        doctor.setName(updated.getName());
+        doctor.setEmail(updated.getEmail());
+        doctor.setPhone(updated.getPhone());
+        doctor.setSpecialty(updated.getSpecialty());
+        doctor.setAvailableTimes(updated.getAvailableTimes());
+
+        doctorRepository.save(doctor);
+        return 1;
     }
 
+    // 7. Get all doctors
     @Transactional
     public List<Doctor> getDoctors() {
         return doctorRepository.findAll();
     }
 
-    public int deleteDoctor(Long doctorId) {
+    // 8. Delete doctor and their appointments
+    @Transactional
+    public int deleteDoctor(Long id) {
+        if (!doctorRepository.existsById(id)) return -1;
         try {
-            if (!doctorRepository.existsById(doctorId)) return -1;
-            appointmentRepository.deleteAllByDoctorId(doctorId);
-            doctorRepository.deleteById(doctorId);
+            appointmentRepository.deleteAllByDoctorId(id);
+            doctorRepository.deleteById(id);
             return 1;
         } catch (Exception e) {
-            e.printStackTrace();
             return 0;
         }
     }
 
+    // 9. Validate doctor credentials
+    @Transactional
     public String validateDoctor(String email, String password) {
-        try {
-            Doctor doctor = doctorRepository.findByEmail(email);
-            if (doctor == null || !doctor.getPassword().equals(password)) return null;
-            return tokenService.generateToken(email);
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
+        Doctor doctor = doctorRepository.findByEmail(email);
+        if (doctor == null || !doctor.getPassword().equals(password)) {
+            return "Invalid email or password";
         }
+        return tokenService.generateToken(String.valueOf(doctor.getId()));
     }
 
-    // ================= Filtros =================
+    // 10. Find doctors by name
     @Transactional
     public List<Doctor> findDoctorByName(String name) {
-        return doctorRepository.findByNameContainingIgnoreCase(name);
+        return doctorRepository.findByNameLike("%" + name + "%");
     }
 
-    public List<Doctor> filterDoctorsByNameSpecilityandTime(
-            String name, String specialty, String time
-    ) {
-        return filterDoctorByTime(
-                doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specialty),
-                time
-        );
+    // 11. Filter by name, specialty, and time
+    @Transactional
+    public List<Doctor> filterDoctorsByNameSpecialtyAndTime(String name, String specialty, String timePeriod) {
+        List<Doctor> doctors = doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specialty);
+        return filterDoctorsByTime(doctors, timePeriod);
     }
 
-    public List<Doctor> filterDoctorByNameAndTime(String name, String time) {
-        return filterDoctorByTime(doctorRepository.findByNameContainingIgnoreCase(name), time);
+    // 12. Filter a list of doctors by AM/PM availability
+    public List<Doctor> filterDoctorsByTime(List<Doctor> doctors, String timePeriod) {
+        return doctors.stream().filter(doctor ->
+                doctor.getAvailableTimes().stream().anyMatch(timeStr -> {
+                    LocalTime time = LocalTime.parse(timeStr);
+                    return timePeriod.equalsIgnoreCase("AM") ? time.isBefore(LocalTime.NOON)
+                            : time.isAfter(LocalTime.NOON);
+                })
+        ).collect(Collectors.toList());
     }
 
-    public List<Doctor> filterDoctorByNameAndSpecility(String name, String specialty) {
+    // 13. Filter by name and time
+    @Transactional
+    public List<Doctor> filterDoctorByNameAndTime(String name, String timePeriod) {
+        List<Doctor> doctors = doctorRepository.findByNameLike("%" + name + "%");
+        return filterDoctorsByTime(doctors, timePeriod);
+    }
+
+    // 14. Filter by name and specialty
+    @Transactional
+    public List<Doctor> filterDoctorByNameAndSpecialty(String name, String specialty) {
         return doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specialty);
     }
 
-    public List<Doctor> filterDoctorByTimeAndSpecility(String specialty, String time) {
-        return filterDoctorByTime(doctorRepository.findBySpecialtyIgnoreCase(specialty), time);
+    // 15. Filter by specialty and time
+    @Transactional
+    public List<Doctor> filterDoctorByTimeAndSpecialty(String specialty, String timePeriod) {
+        List<Doctor> doctors = doctorRepository.findBySpecialtyIgnoreCase(specialty);
+        return filterDoctorsByTime(doctors, timePeriod);
     }
 
-    public List<Doctor> filterDoctorBySpecility(String specialty) {
+    // 16. Filter by specialty
+    @Transactional
+    public List<Doctor> filterDoctorBySpecialty(String specialty) {
         return doctorRepository.findBySpecialtyIgnoreCase(specialty);
     }
 
-    public List<Doctor> filterDoctorsByTime(String time) {
-        return filterDoctorByTime(doctorRepository.findAll(), time);
-    }
-
-    private List<Doctor> filterDoctorByTime(List<Doctor> doctors, String time) {
-        return doctors.stream()
-                .filter(d -> d.getAvailableTimes().stream()
-                        .map(LocalTime::parse)
-                        .anyMatch(t -> isTimeMatch(t, time)))
-                .collect(Collectors.toList());
-    }
-
-    private boolean isTimeMatch(LocalTime time, String period) {
-        if ("AM".equalsIgnoreCase(period)) return time.isBefore(LocalTime.NOON);
-        if ("PM".equalsIgnoreCase(period)) return !time.isBefore(LocalTime.NOON);
-        return false;
+    // 17. Filter all doctors by time availability
+    @Transactional
+    public List<Doctor> filterDoctorsByTime(String timePeriod) {
+        List<Doctor> allDoctors = doctorRepository.findAll();
+        return filterDoctorsByTime(allDoctors, timePeriod);
     }
 }
+
